--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,7 @@ services:
   redis_service:
     image: redis:7.0.5-alpine
     container_name: reading-point-member-redis-service
+    restart: unless-stopped
     environment:
       - REDIS_PORT_NUMBER=6379
 
